--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "notion-to-md": "^2.5.5"
   },
   "devDependencies": {
     "eslint": "^8.30.0",
